@@ -26,11 +26,7 @@ public class MasterGUI extends JFrame implements ActionListener {
 	private int selectedColumn;
 
 	private Server server;
-	private boolean connected = false;
-	private boolean myTurn = false;
-
-	private final Color[] colorsValues = { Color.red, Color.blue, Color.green, Color.yellow, Color.MAGENTA, Color.darkGray };
-	private final String[] colorsNames = { "RED", "BLUE", "GREEN", "YELLOW", "MAGENTA", "DARK_GRAY" };
+	
 
 	public void initializeMasterBoard() {
 
@@ -113,7 +109,7 @@ public class MasterGUI extends JFrame implements ActionListener {
 		if (colorsS.contains(e.getActionCommand())) {
 			selectedColor = colors[colorsS.indexOf(e.getActionCommand())];
 		} else if (colorsN.contains(e.getActionCommand())) {
-			Integer i = new Integer(e.getActionCommand());
+			Integer i = Integer.valueOf(e.getActionCommand());
 			selectedColumn = i.intValue();
 		}
 		if (selectedColumn != -1 && !(selectedColor.equals(Color.GRAY))) {
@@ -169,13 +165,6 @@ public class MasterGUI extends JFrame implements ActionListener {
 		drawnMaster.paintOrder(message.getRound(), o);
 		// activate button to be able to send response to client
 		enableButtons(true);
-	}
-
-	// nicht nur Variable setzen sondern auch alle von dieser Variable abhängigen Komponenten darüber informieren,
-	// dass diese Variable einen neuen Wert hat
-	private void setConnected(boolean c){
-		this.connected = c;
-		enableButtons(c);
 	}
 
 	/*
